/**
 * Data Plane WebSocket è¿æ¥ Hook
 * 
 * æä¾›ä¸ Data Plane (C++ WebSocket Server) çš„è¿æ¥ç®¡ç†ï¼Œ
 * åŒ…æ‹¬è®¤è¯ã€è®¢é˜…ã€å¿ƒè·³ã€çŠ¶æ€æ¥æ”¶å’Œæ§åˆ¶å‘½ä»¤å‘é€
 * 
 * ä½¿ç”¨ Protobuf è¿›è¡Œæ¶ˆæ¯åºåˆ—åŒ–/ååºåˆ—åŒ–
 */

import { ref, reactive, onMounted, onUnmounted, computed } from 'vue'
import { qyh } from '@/proto/dataplane'
import { getSystemConfig } from '@/api/system'

// Protobuf ç±»å‹åˆ«å
const { WebSocketMessage, MessageType } = qyh.dataplane

// ==================== ç±»å‹å®šä¹‰ ====================

// é‡æ–°å¯¼å‡º Protobuf æšä¸¾ä¾›å¤–éƒ¨ä½¿ç”¨
export { MessageType }
export type { qyh }

/** æœºå™¨äººå·¥ä½œæ¨¡å¼ */
export enum RobotMode {
  IDLE = 0,
  TELEOP = 1,
  AUTO = 2,
  MAINTENANCE = 3,
  ERROR = 4,
}

/** ä½å§¿ */
export interface Pose {
  position: { x: number; y: number; z: number }
  orientation: { x: number; y: number; z: number; w: number }
}

/** é€Ÿåº¦ */
export interface Twist {
  linear: { x: number; y: number; z: number }
  angular: { x: number; y: number; z: number }
}

/** æ‰§è¡Œå™¨çŠ¶æ€ (å‡é™/è…°éƒ¨/å¤´éƒ¨) */
export interface ActuatorState {
  actuator_id: string
  position: number
  velocity: number
  min_limit: number
  max_limit: number
  in_motion: boolean
  in_position: boolean
}

/** å¤¹çˆªçŠ¶æ€ */
export interface GripperState {
  gripper_id: string
  position: number
  force: number
  object_detected: boolean
  in_motion: boolean
}

/** æœºæ¢°è‡‚çŠ¶æ€ */
export interface ArmState {
  connected: boolean
  powered_on: boolean
  enabled: boolean
  in_estop: boolean
  in_error: boolean
  servo_mode: boolean
  error_message: string
  left_positions: number[]
  right_positions: number[]
  left_end_effector?: Pose
  right_end_effector?: Pose
  left_in_position: boolean
  right_in_position: boolean
}

/** åº•ç›˜çŠ¶æ€ */
export interface ChassisState {
  odom?: Pose
  velocity?: Twist
  battery_level: number
  charging: boolean
  emergency_stop: boolean
  navigation?: {
    state: number
    current_goal?: Pose
    distance_remaining: number
    eta_seconds: number
    error_message: string
  }
}

/** å…³èŠ‚çŠ¶æ€ */
export interface JointState {
  names: string[]
  positions: number[]
  velocities: number[]
  efforts: number[]
}

/** VR ç³»ç»ŸçŠ¶æ€ */
export interface VRSystemState {
  connected: boolean
  head_pose?: Pose
  left_controller_active: boolean
  right_controller_active: boolean
  left_clutch_engaged: boolean
  right_clutch_engaged: boolean
}

/** ä»»åŠ¡çŠ¶æ€ */
export interface TaskState {
  task_id: number
  task_name: string
  status: 'pending' | 'running' | 'paused' | 'completed' | 'failed' | 'cancelled'
  current_step: number
  total_steps: number
  progress: number
  current_action: string
  error_message?: string
}

/** æœºå™¨äººç»¼åˆçŠ¶æ€ */
export interface RobotState {
  mode: RobotMode
  control_held: boolean
  control_holder: string
  arm?: ArmState
  chassis?: ChassisState
  joints?: JointState
  lift?: ActuatorState
  waist?: ActuatorState
  head_pan?: ActuatorState
  head_tilt?: ActuatorState
  left_gripper?: GripperState
  right_gripper?: GripperState
  system_ready: boolean
  active_errors: string[]
  warnings: string[]
}

// ä½¿ç”¨ Protobuf ç”Ÿæˆçš„ç±»å‹
export type IWebSocketMessage = qyh.dataplane.IWebSocketMessage

/** è¿æ¥çŠ¶æ€ */
export type ConnectionState = 'disconnected' | 'connecting' | 'authenticating' | 'connected' | 'error'

/** å¯è®¢é˜…çš„è¯é¢˜ */
export const SUBSCRIBABLE_TOPICS = [
  'basic_state',      // åŸºç¡€çŠ¶æ€ (1Hz)
  'robot_state',      // ç»¼åˆçŠ¶æ€ (30Hz)
  'joint_state',      // å…³èŠ‚çŠ¶æ€ (100Hz)
  'arm_state',        // æœºæ¢°è‡‚çŠ¶æ€
  'chassis_state',    // åº•ç›˜çŠ¶æ€
  'gripper_state',    // å¤¹çˆªçŠ¶æ€
  'vr_system_state',  // VR çŠ¶æ€
  'task_state',       // ä»»åŠ¡çŠ¶æ€
  'actuator_state',   // æ‰§è¡Œå™¨çŠ¶æ€
] as const

export type SubscribableTopic = typeof SUBSCRIBABLE_TOPICS[number]

// ==================== é…ç½® ====================

const DATA_PLANE_PORT = 8765
const HEARTBEAT_INTERVAL = 150  // ms, < 200ms watchdog timeout
const RECONNECT_DELAY = 2000    // ms
const MAX_RECONNECT_ATTEMPTS = 10
const AUTH_TIMEOUT = 10000      // ms

// ==================== Composable ====================

export function useDataPlane() {
  // è¿æ¥çŠ¶æ€
  const connectionState = ref<ConnectionState>('disconnected')
  const sessionId = ref<string>('')
  const reconnectAttempts = ref(0)
  const lastError = ref<string>('')
  
  // è®¢é˜…çš„è¯é¢˜
  const subscribedTopics = ref<Set<string>>(new Set())
  
  // æœ€æ–°çŠ¶æ€æ•°æ®
  const robotState = reactive<Partial<RobotState>>({})
  const jointState = reactive<Partial<JointState>>({})
  const armState = reactive<Partial<ArmState>>({})
  const chassisState = reactive<Partial<ChassisState>>({})
  const vrSystemState = reactive<Partial<VRSystemState>>({})
  const taskState = reactive<Partial<TaskState>>({})
  const liftState = reactive<Partial<ActuatorState>>({})
  const waistState = reactive<Partial<ActuatorState>>({})
  const headPanState = reactive<Partial<ActuatorState>>({})
  const headTiltState = reactive<Partial<ActuatorState>>({})
  const leftGripperState = reactive<Partial<GripperState>>({})
  const rightGripperState = reactive<Partial<GripperState>>({})
  
  // è®¡ç®—å±æ€§
  const isConnected = computed(() => connectionState.value === 'connected')
  const isAuthenticated = computed(() => connectionState.value === 'connected' && sessionId.value !== '')
  
  // å†…éƒ¨å˜é‡
  let ws: WebSocket | null = null
  let heartbeatTimer: number | null = null
  let reconnectTimer: number | null = null
  let authTimeoutTimer: number | null = null
  let messageSequence = 0
  
  // äº‹ä»¶å›è°ƒ
  const eventHandlers: Map<string, Set<(data: any) => void>> = new Map()
  
  /**
   * è·å– WebSocket URL
   */
  async function getWsUrl(): Promise<string> {
    try {
      const config = await getSystemConfig()
      if (config.endpoints && config.endpoints.websocket) {
        return config.endpoints.websocket
      }
    } catch (e) {
      console.warn('[DataPlane] è·å–ç³»ç»Ÿé…ç½®å¤±è´¥, ä½¿ç”¨é»˜è®¤ WebSocket åœ°å€', e)
    }
    
    // åå¤‡æ–¹æ¡ˆ
    const hostname = window.location.hostname
    return `ws://${hostname}:${DATA_PLANE_PORT}/`
  }
  
  /**
   * è¿æ¥åˆ° Data Plane
   */
  async function connect() {
    if (ws?.readyState === WebSocket.OPEN || ws?.readyState === WebSocket.CONNECTING) {
      return
    }
    
    connectionState.value = 'connecting'
    lastError.value = ''
    
    const url = await getWsUrl()
    console.log(`[DataPlane] è¿æ¥åˆ° ${url}`)
    
    try {
      ws = new WebSocket(url)
      console.log("[DataPlane] ğŸ”Œ WebSocketå¯¹è±¡åˆ›å»ºå®Œæˆ, readyState:", ws.readyState)
      ws.binaryType = 'arraybuffer'  // Protobuf ä½¿ç”¨äºŒè¿›åˆ¶
      
      ws.onopen = handleOpen
      ws.onmessage = handleMessage
      ws.onerror = handleError
      ws.onclose = handleClose
      console.log("[DataPlane] ğŸ“Œ äº‹ä»¶å¤„ç†å™¨ç»‘å®šå®Œæˆ")
    } catch (error: any) {
      console.error('[DataPlane] è¿æ¥å¤±è´¥:', error)
      connectionState.value = 'error'
      lastError.value = error.message
      scheduleReconnect()
    }
  }
  
  /**
   * æ–­å¼€è¿æ¥
   */
  function disconnect() {
    clearTimers()
    reconnectAttempts.value = 0
    
    if (ws) {
      ws.onclose = null  // é˜²æ­¢è§¦å‘é‡è¿
      ws.close()
      ws = null
    }
    
    connectionState.value = 'disconnected'
    sessionId.value = ''
    subscribedTopics.value.clear()
  }
  
  /**
   * å‘é€æ¶ˆæ¯ (ä½¿ç”¨ Protobuf åºåˆ—åŒ–)
   */
  function send(message: qyh.dataplane.IWebSocketMessage): boolean {
    console.log("[DataPlane] ğŸ“¤ sendè°ƒç”¨, wså­˜åœ¨:", !!ws, "readyState:", ws?.readyState, "OPEN=", WebSocket.OPEN)
    if (!ws || ws.readyState !== WebSocket.OPEN) {
      console.warn('[DataPlane] WebSocket æœªè¿æ¥ï¼Œæ— æ³•å‘é€æ¶ˆæ¯')
      return false
    }
    
    // æ·»åŠ åºåˆ—å·å’Œæ—¶é—´æˆ³
    message.sequence = ++messageSequence
    message.timestamp = {
      seconds: Math.floor(Date.now() / 1000),
      nanos: (Date.now() % 1000) * 1000000
    }
    
    try {
      // ä½¿ç”¨ Protobuf ç¼–ç 
      const protoMsg = WebSocketMessage.create(message)
      const buffer = WebSocketMessage.encode(protoMsg).finish()
      console.log("[DataPlane] ğŸ” å‘é€æ•°æ®, å¤§å°:", buffer.length, "å­—èŠ‚")
      console.log("[DataPlane] ğŸ” å‰20å­—èŠ‚:", Array.from(buffer.slice(0, 20)))
      ws.send(buffer)
      console.log("[DataPlane] âœ… ws.send() å®Œæˆ")
      return true
    } catch (error) {
      console.error('[DataPlane] Protobuf ç¼–ç å¤±è´¥:', error)
      return false
    }
  }
  
  /**
   * è®¤è¯
   */
  function authenticate() {
    console.log("[DataPlane] ğŸ” authenticateè°ƒç”¨, wså­˜åœ¨:", !!ws, "readyState:", ws?.readyState)
    const token = localStorage.getItem('token')
    if (!token) {
      console.error('[DataPlane] æ—  Tokenï¼Œæ— æ³•è®¤è¯')
      connectionState.value = 'error'
      lastError.value = 'æœªç™»å½•'
      return
    }
    
    connectionState.value = 'authenticating'
    
    // è®¾ç½®è®¤è¯è¶…æ—¶
    authTimeoutTimer = window.setTimeout(() => {
      console.error('[DataPlane] è®¤è¯è¶…æ—¶')
      connectionState.value = 'error'
      lastError.value = 'è®¤è¯è¶…æ—¶'
      disconnect()
    }, AUTH_TIMEOUT)
    
    send({
      type: MessageType.MSG_AUTH_REQUEST,
      authRequest: {
        token,
        clientType: 'web',
        clientVersion: '1.0.0'
      }
    })
  }
  
  /**
   * è®¢é˜…è¯é¢˜
   */
  function subscribe(topics: SubscribableTopic[], maxRateHz: number = 30) {
    if (!isAuthenticated.value) {
      console.warn('[DataPlane] æœªè®¤è¯ï¼Œæ— æ³•è®¢é˜…')
      return
    }
    
    send({
      type: MessageType.MSG_SUBSCRIBE,
      subscribe: {
        topics,
        maxRateHz
      }
    })
    
    topics.forEach(t => subscribedTopics.value.add(t))
  }
  
  /**
   * å–æ¶ˆè®¢é˜…
   */
  function unsubscribe(topics: SubscribableTopic[]) {
    if (!isAuthenticated.value) return
    
    send({
      type: MessageType.MSG_UNSUBSCRIBE,
      unsubscribe: { topics }
    })
    
    topics.forEach(t => subscribedTopics.value.delete(t))
  }
  
  /**
   * å‘é€å¿ƒè·³
   */
  function sendHeartbeat() {
    if (!isAuthenticated.value) return
    
    send({
      type: MessageType.MSG_HEARTBEAT,
      heartbeat: {
        sessionId: sessionId.value,
        controlType: qyh.dataplane.ControlType.CONTROL_NONE
      }
    })
  }

  /**
   * å‘é€ç´§æ€¥åœæ­¢ (WebSocket é€šé“ - ä¼˜å…ˆä½¿ç”¨)
   */
  function sendEmergencyStop(active: boolean, reason: string = 'User triggered emergency stop'): boolean {
    if (!ws || ws.readyState !== WebSocket.OPEN) {
      return false
    }

    /* 
     * æ³¨æ„: æ€¥åœä¸éœ€è¦è®¤è¯å³å¯å‘é€ (æ ¹æ®å®‰å…¨è¦æ±‚)
     * ä½†å¦‚æœè¿æ¥æœªå»ºç«‹ï¼Œå¿…é¡»å›é€€åˆ° HTTP
     */

    // ç›´æ¥æ„é€ æ¶ˆæ¯å‘é€ï¼Œç»•è¿‡ send() çš„åºåˆ—å·æ£€æŸ¥å¯èƒ½å¸¦æ¥çš„é—®é¢˜ï¼ˆè™½ç„¶ send() ä¹Ÿèƒ½ç”¨ï¼‰
    // è¿™é‡Œå¤ç”¨ standard send()
    return send({
      type: MessageType.MSG_EMERGENCY_STOP,
      emergencyStop: {
        active: active,
        reason: reason
      }
    })
  }
  
  /**
   * å‘é€åº•ç›˜é€Ÿåº¦å‘½ä»¤
   * æ”¯æŒä¸¤ç§è°ƒç”¨æ–¹å¼:
   * 1. sendChassisVelocity(linearX, linearY, angularZ) - ç›´æ¥å‚æ•°
   * 2. sendChassisVelocity({ linear: {x,y,z}, angular: {x,y,z} }) - å¯¹è±¡æ ¼å¼
   */
  function sendChassisVelocity(
    linearXOrCmd: number | { linear?: { x?: number; y?: number; z?: number }; angular?: { x?: number; y?: number; z?: number } },
    linearY?: number,
    angularZ?: number
  ) {
    if (!isAuthenticated.value) return false
    
    let lx: number, ly: number, az: number
    
    if (typeof linearXOrCmd === 'object') {
      // å¯¹è±¡æ ¼å¼è°ƒç”¨
      lx = linearXOrCmd.linear?.x ?? 0
      ly = linearXOrCmd.linear?.y ?? 0
      az = linearXOrCmd.angular?.z ?? 0
    } else {
      // ç›´æ¥å‚æ•°è°ƒç”¨
      lx = linearXOrCmd
      ly = linearY ?? 0
      az = angularZ ?? 0
    }
    
    return send({
      type: MessageType.MSG_CHASSIS_VELOCITY,
      chassisVelocity: {
        linearX: lx,
        linearY: ly,
        angularZ: az
      }
    })
  }
  
  /**
   * å‘é€å…³èŠ‚å‘½ä»¤
   */
  function sendJointCommand(names: string[], positions: number[], velocities?: number[]) {
    if (!isAuthenticated.value) return false
    
    return send({
      type: MessageType.MSG_JOINT_COMMAND,
      jointCommand: {
        names,
        positions,
        velocities: velocities || []
      }
    })
  }
  
  /**
   * å‘é€å¤¹çˆªå‘½ä»¤
   */
  function sendGripperCommand(gripperId: 'left' | 'right', position: number, force: number = 50) {
    if (!isAuthenticated.value) return false
    
    return send({
      type: MessageType.MSG_GRIPPER_COMMAND,
      gripperCommand: {
        gripperId,
        position,
        force
      }
    })
  }

  /**
   * å‘é€å‡é™æŸ±å‘½ä»¤
   */
  function sendLiftCommand(command: string, targetHeight: number = 0, speed: number = 0.5) {
     if (!isAuthenticated.value) return false
     return send({
       type: MessageType.MSG_LIFT_COMMAND,
       liftCommand: {
         command,
         targetHeight,
         speed
       }
     })
  }

  /**
   * å‘é€å¤´éƒ¨äº‘å°å‘½ä»¤
   */
  function sendHeadCommand(command: string, yaw: number = 0, pitch: number = 0, presetName: string = '', speed: number = 0.5) {
     if (!isAuthenticated.value) return false
     return send({
       type: MessageType.MSG_HEAD_COMMAND,
       headCommand: {
         command,
         yaw,
         pitch,
         presetName,
         speed
       }
     })
  }

  /**
   * å‘é€è…°éƒ¨å‘½ä»¤
   */
  function sendWaistCommand(command: string, targetAngle: number = 0, speed: number = 0.5) {
     if (!isAuthenticated.value) return false
     return send({
       type: MessageType.MSG_WAIST_COMMAND,
       waistCommand: {
         command,
         targetAngle,
         speed
       }
     })
  }

  /**
   * å‘é€æœºæ¢°è‡‚ç§»åŠ¨å‘½ä»¤
   */
  function sendArmMove(armSide: string, motionType: string, target: number[], speed: number = 0.5) {
    if (!isAuthenticated.value) return false
    return send({
      type: MessageType.MSG_ARM_MOVE,
      armMove: {
        armSide,
        motionType,
        target,
        speed
      }
    })
  }

  /**
   * å‘é€æœºæ¢°è‡‚ç‚¹åŠ¨å‘½ä»¤
   */
  function sendArmJog(armSide: string, axisIndex: number, direction: number, jogMode: string = 'joint') {
    if (!isAuthenticated.value) return false
    return send({
      type: MessageType.MSG_ARM_JOG,
      armJog: {
        armSide,
        jogMode,
        axisIndex, // 0-5
        direction // -1.0 to 1.0 (speed * sign)
      }
    })
  }
  
  /**
   * æ³¨å†Œäº‹ä»¶å¤„ç†å™¨
   */
  function on(event: string, handler: (data: any) => void) {
    if (!eventHandlers.has(event)) {
      eventHandlers.set(event, new Set())
    }
    eventHandlers.get(event)!.add(handler)
    
    return () => {
      eventHandlers.get(event)?.delete(handler)
    }
  }
  
  /**
   * è§¦å‘äº‹ä»¶
   */
  function emit(event: string, data: any) {
    eventHandlers.get(event)?.forEach(handler => {
      try {
        handler(data)
      } catch (e) {
        console.error(`[DataPlane] äº‹ä»¶å¤„ç†å™¨é”™è¯¯ (${event}):`, e)
      }
    })
  }
  
  // ==================== å†…éƒ¨å¤„ç†å‡½æ•° ====================
  
  function handleOpen() {
    console.log("[DataPlane] âœ… handleOpenè§¦å‘! wså­˜åœ¨:", !!ws, "readyState:", ws?.readyState)
    console.log('[DataPlane] WebSocket å·²è¿æ¥')
    reconnectAttempts.value = 0
    authenticate()
  }
  
  function handleMessage(event: MessageEvent) {
    let message: qyh.dataplane.WebSocketMessage
    console.log("[DataPlane] ğŸ“© handleMessage æ”¶åˆ°æ¶ˆæ¯, ç±»å‹:", typeof event.data, event.data instanceof ArrayBuffer ? "ArrayBuffer" : (event.data instanceof Blob ? "Blob" : "å…¶ä»–"), "å¤§å°:", event.data?.byteLength || event.data?.size || event.data?.length)
    
    try {
      // ä½¿ç”¨ Protobuf è§£ç äºŒè¿›åˆ¶æ•°æ®
      if (event.data instanceof ArrayBuffer) {
        const uint8Array = new Uint8Array(event.data)
        message = WebSocketMessage.decode(uint8Array)
      } else if (typeof event.data === 'string') {
        // å…¼å®¹ JSON æ ¼å¼ï¼ˆè°ƒè¯•ç”¨ï¼‰
        const jsonObj = JSON.parse(event.data)
        message = WebSocketMessage.fromObject(jsonObj)
      } else {
        console.warn('[DataPlane] æœªçŸ¥æ¶ˆæ¯æ ¼å¼:', typeof event.data)
        return
      }
    } catch (e) {
      console.error('[DataPlane] Protobuf è§£ç å¤±è´¥:', e)
      return
    }
    
    console.log("[DataPlane] ğŸ“¦ è§£æåæ¶ˆæ¯ç±»å‹:", message.type, "MessageType.MSG_ARM_STATE=", MessageType.MSG_ARM_STATE)
    
    switch (message.type) {
      case MessageType.MSG_AUTH_RESPONSE:
        handleAuthResponse(message)
        break
        
      case MessageType.MSG_ROBOT_STATE:
        if (message.robotState) {
          Object.assign(robotState, message.robotState)
          emit('robot_state', message.robotState)
        }
        break
        
      case MessageType.MSG_JOINT_STATE:
        if (message.jointState) {
          Object.assign(jointState, message.jointState)
          emit('joint_state', message.jointState)
        }
        break
        
      case MessageType.MSG_ARM_STATE:
        console.log("[DataPlane] ğŸ¦¾ æ”¶åˆ°æ‰‹è‡‚çŠ¶æ€:", message.armState)
        if (message.armState) {
          Object.assign(armState, message.armState)
          emit('arm_state', message.armState)
        }
        break
        
      case MessageType.MSG_CHASSIS_STATE:
        console.log("[DataPlane] ğŸš— æ”¶åˆ°åº•ç›˜çŠ¶æ€:", message.chassisState)
        if (message.chassisState) {
          Object.assign(chassisState, message.chassisState)
          emit('chassis_state', message.chassisState)
        }
        break
        
      case MessageType.MSG_GRIPPER_STATE:
        if (message.gripperState) {
          const gs = message.gripperState
          if (gs.gripperId === 'left') {
            Object.assign(leftGripperState, gs)
          } else if (gs.gripperId === 'right') {
            Object.assign(rightGripperState, gs)
          }
          emit('gripper_state', gs)
        }
        break
        
      case MessageType.MSG_VR_SYSTEM_STATE:
        if (message.vrSystemState) {
          Object.assign(vrSystemState, message.vrSystemState)
          emit('vr_system_state', message.vrSystemState)
        }
        break
        
      case MessageType.MSG_TASK_STATE:
        if (message.taskState) {
          Object.assign(taskState, message.taskState)
          emit('task_state', message.taskState)
        }
        break
        
      case MessageType.MSG_ACTUATOR_STATE:
        if (message.actuatorState) {
          const as = message.actuatorState
          switch (as.actuatorId) {
            case 'lift':
              Object.assign(liftState, as)
              break
            case 'waist':
              Object.assign(waistState, as)
              break
            case 'head_pan':
              Object.assign(headPanState, as)
              break
            case 'head_tilt':
              Object.assign(headTiltState, as)
              break
          }
          emit('actuator_state', as)
        }
        break
        
      case MessageType.MSG_BASIC_STATE:
        console.log("[DataPlane] ğŸ“Š æ”¶åˆ°åŸºç¡€çŠ¶æ€:", message.basicState)
        if (message.basicState) {
          Object.assign(basicState, message.basicState)
          emit('basic_state', message.basicState)
        }
        break
        
      case MessageType.MSG_BASIC_STATE:
        console.log("[DataPlane] ğŸ“Š æ”¶åˆ°åŸºç¡€çŠ¶æ€:", message.basicState)
        if (message.basicState) {
          Object.assign(basicState, message.basicState)
          emit('basic_state', message.basicState)
        }
        break
        
      case MessageType.MSG_ERROR:
        if (message.error) {
          console.error('[DataPlane] æ”¶åˆ°é”™è¯¯:', message.error)
          lastError.value = message.error.message || 'æœªçŸ¥é”™è¯¯'
          emit('error', message.error)
        }
        break
        
      case MessageType.MSG_MODE_CHANGED:
        if (message.modeChanged) {
          emit('mode_changed', message.modeChanged)
        }
        break
        
      case MessageType.MSG_CONTROL_CHANGED:
        if (message.controlChanged) {
          emit('control_changed', message.controlChanged)
        }
        break
        
      case MessageType.MSG_EMERGENCY_STOP:
        if (message.emergencyStop) {
          console.warn('[DataPlane] ç´§æ€¥åœæ­¢:', message.emergencyStop)
          emit('emergency_stop', message.emergencyStop)
        }
        break
        
      case MessageType.MSG_HEARTBEAT_ACK:
        // å¿ƒè·³ç¡®è®¤ï¼Œä¸å¤„ç†
        break
        
      default:
        console.log('[DataPlane] æœªçŸ¥æ¶ˆæ¯ç±»å‹:', message.type)
    }
  }
  
  function handleAuthResponse(message: qyh.dataplane.WebSocketMessage) {
    if (authTimeoutTimer) {
      clearTimeout(authTimeoutTimer)
      authTimeoutTimer = null
    }
    
    const resp = message.authResponse
    if (!resp) return
    
    if (resp.success && resp.session) {
      console.log('[DataPlane] è®¤è¯æˆåŠŸ:', resp.session.user?.username)
      sessionId.value = resp.session.sessionId || ''
      connectionState.value = 'connected'
      
      // å¼€å§‹å¿ƒè·³
      startHeartbeat()
      
      emit('authenticated', resp.session)
    } else {
      console.error('[DataPlane] è®¤è¯å¤±è´¥:', resp.error?.message)
      connectionState.value = 'error'
      lastError.value = resp.error?.message || 'è®¤è¯å¤±è´¥'
      disconnect()
    }
  }
  
  function handleError(event: Event) {
    console.error('[DataPlane] WebSocket é”™è¯¯:', event)
    lastError.value = 'WebSocket è¿æ¥é”™è¯¯'
  }
  
  function handleClose(event: CloseEvent) {
    console.log(`[DataPlane] WebSocket å·²æ–­å¼€: ${event.code} ${event.reason}`)
    
    clearTimers()
    connectionState.value = 'disconnected'
    sessionId.value = ''
    
    scheduleReconnect()
  }
  
  function startHeartbeat() {
    if (heartbeatTimer) {
      clearInterval(heartbeatTimer)
    }
    
    heartbeatTimer = window.setInterval(() => {
      sendHeartbeat()
    }, HEARTBEAT_INTERVAL)
  }
  
  function scheduleReconnect() {
    if (reconnectTimer) return
    if (reconnectAttempts.value >= MAX_RECONNECT_ATTEMPTS) {
      console.error('[DataPlane] è¾¾åˆ°æœ€å¤§é‡è¿æ¬¡æ•°ï¼Œåœæ­¢é‡è¿')
      return
    }
    
    reconnectAttempts.value++
    const delay = RECONNECT_DELAY * Math.min(reconnectAttempts.value, 5)
    
    console.log(`[DataPlane] ${delay}ms åå°è¯•é‡è¿ (${reconnectAttempts.value}/${MAX_RECONNECT_ATTEMPTS})`)
    
    reconnectTimer = window.setTimeout(() => {
      reconnectTimer = null
      connect()
    }, delay)
  }
  
  function clearTimers() {
    if (heartbeatTimer) {
      clearInterval(heartbeatTimer)
      heartbeatTimer = null
    }
    if (reconnectTimer) {
      clearTimeout(reconnectTimer)
      reconnectTimer = null
    }
    if (authTimeoutTimer) {
      clearTimeout(authTimeoutTimer)
      authTimeoutTimer = null
    }
  }
  
  // ç”Ÿå‘½å‘¨æœŸ
  onMounted(() => {
    // é»˜è®¤ä¸è‡ªåŠ¨è¿æ¥ï¼Œç”±ç»„ä»¶ä¸»åŠ¨è°ƒç”¨ connect()
  })
  
  onUnmounted(() => {
    disconnect()
  })
  
  return {
    // çŠ¶æ€
    connectionState,
    sessionId,
    isConnected,
    isAuthenticated,
    lastError,
    subscribedTopics,
    reconnectAttempts,
    
    // å®æ—¶æ•°æ®
    robotState,
    jointState,
    armState,
    chassisState,
    vrSystemState,
    taskState,
    basicState,
    basicState,
    liftState,
    waistState,
    headPanState,
    headTiltState,
    leftGripperState,
    rightGripperState,
    
    // æ–¹æ³•
    connect,
    disconnect,
    subscribe,
    unsubscribe,
    sendChassisVelocity,
    sendJointCommand,
    sendGripperCommand,
    sendEmergencyStop,
    sendLiftCommand,
    sendHeadCommand,
    sendWaistCommand,
    sendArmMove,
    sendArmJog,
    on,
  }
}

// å•ä¾‹æ¨¡å¼
let dataPlaneInstance: ReturnType<typeof useDataPlane> | null = null

/**
 * è·å–å…¨å±€ Data Plane å®ä¾‹ (å•ä¾‹)
 */
export function useDataPlaneSingleton() {
  if (!dataPlaneInstance) {
    dataPlaneInstance = useDataPlane()
  }
  return dataPlaneInstance
}

export default useDataPlane
